/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
}

group 'home.dv'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

dependencies {
	compile 'org.apache.tika:tika-core:1.24.1'

    testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    testImplementation 'com.google.guava:guava:28.2-jre'

    // Use JUnit test framework
    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testCompile 'org.hamcrest:hamcrest-all:1.3'

}
